--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
             // Linhas divisórias
             ctx.beginPath();
-            ctx.strokeStyle = sector.color === "#FF8C00" ? "#000000" : "#FF8C00";
+            ctx.strokeStyle = sector.color === "#FFC605" ? "#FFC605" : "#FFC605";
             ctx.lineWidth = 4;
             ctx.moveTo(rad, rad);
             ctx.lineTo(rad + rad * Math.cos(ang), rad + rad * Math.sin(ang));
